# top-nesting-project

./: .gitignore  README.md
blogbot-runway/: runway.yml
blogbot-runway/blogbot-cf.tf/: dev-us-east-2.tfvars  main.tf  outputs.tf
blogbot-runway/blogbot-lambda.sls/: handler.py  package.json  publisher.py  serverless.yml
blogbot-runway/blogbot.tf/: dev-us-east-2.tfvars  main.tf  outputs.tf  variables.tf
blogbot-runway/blogbot.tf/lambda/ApprovalFunction/: index.js
blogbot-runway/tf-state.cfn/: stacks.yaml
markov/: pyproject.toml
markov-writer/: handler.py  publisher.py  pyproject.toml  serverless.yml
markov/markovblog/: markovtest.py  markovtest2.py  markovtest3.py  markovtest4.py  markovtest5.py  markovtest6.py  ssmtest.py
markov/tests/: test_markovblog.py
runway-stuff/: runway.yml
runway-stuff/blogbot-cf.tf/: dev-us-east-2.tfvars  variables.tf
runway-stuff/blogbot-lambda.sls/: handler.py  package-lock.json  package.json  publisher.py  pyproject.toml  serverless.yml
runway-stuff/blogbot.tf/: dev-us-east-2.tfvars  main.tf  variables.tf
runway-stuff/blogbot.tf/lambda/SendEmailFunction/: index.js
runway-stuff/sampleapp.sls/: package-lock.json
runway-stuff/steps.sls/: LambdaApprovalFunction.js  LambdaHumanApprovalSendEmailFunction.js
runway-stuff/test/: serverless.yml
runway-stuff/test2/: package.json  serverless.yml
runway-stuff/tf-state.cfn/: dev-us-east-2.env
